# mutti

./: .travis.yml  README.md  configure.ac
src/: Makefile.am  bitte-bdb.c  bitte-dsk.c  bitte-mem.c  bitte-private.h  bitte.c  bitte.h  dt-strpf.c  dt-strpf.h  instant.c  instant.h  mutti.c  mutti.h  mutti.yuck  nifty.h  range.c  range.h  rb.c  rb.h  timeline.c  timeline.h
test/: Makefile.am  addgetrem_01.c  addgetrem_01.clit  addgetrem_02.c  addgetrem_02.clit  addgetrem_03.c  addgetrem_03.clit  addgetrem_bdb_01.c  addgetrem_bdb_01.clit  addgetrem_bdb_02.c  addgetrem_bdb_02.clit  addgetrem_bdb_03.c  addgetrem_bdb_03.clit  addgetrem_dsk_01.c  addgetrem_dsk_01.clit  hist_01.c  hist_01.clit  hist_bdb_01.c  hist_bdb_01.clit  rolf-pump-bdb.c  rolf-pump-dsk.c  rolf-pump.c  rtr_01.c  rtr_01.clit  rtr_02.c  rtr_02.clit  rtr_03.c  rtr_03.clit  scan_01.c  scan_01.clit  scan_02.c  scan_02.clit
